<resources>
    <string name="app_name">CryptoCurrencies Eksamen PGR208-1V</string>
    <string name="usd">USD</string>

    <string name="crypto">Crypto</string>

    <string name="crypto_value">Crypto value</string>

    <string name="usd_value">USD value</string>

    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="youhave">You have_______________,value teksten slettes når vi får db på plass</string>
    <string name="hardcoded_text">Hardcoded text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points">Points 10110 usd</string>
    <string name="SplashText">Splash Screen</string>
</resources>