<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity">

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/usd"
            android:layout_height="wrap_content"
            style="@style/text_label">

        </TextView>

        <EditText
            android:id="@+id/editUSD"
            android:layout_marginLeft="16dp"
            android:hint="@string/usd_value"
            android:layout_height="wrap_content"
            style="@style/edit_text_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/crypto"
            android:layout_height="wrap_content"
            style="@style/text_label">

        </TextView>

        <EditText
            android:id="@+id/editCrypto"
            android:inputType="number"
            android:layout_marginLeft="16dp"
            android:hint="@string/crypto_value"
            android:layout_height="wrap_content"
            style="@style/edit_text_style" />

    </LinearLayout>

    <Button
        android:enabled="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/buy"
        android:layout_marginTop="16dp"
        android:id="@+id/sellNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>